--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reduxjs/toolkit": "^2.2.5",
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
@@ -42,6 +43,7 @@
     "react-intersection-observer": "^9.10.2",
     "react-leaflet": "^4.2.1",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-tooltip": "^5.26.4",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
