--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
     "react-intersection-observer": "^9.10.2",
     "react-leaflet": "^4.2.1",
