--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-redux": "^9.1.2",
     "react-tooltip": "^5.26.4",
     "sharp": "^0.33.4",
+    "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
