--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.5",
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
     "@types/react-star-rating-component": "^1.4.4",
@@ -40,7 +42,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "mongoose": "^8.3.4",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-safe-action": "^7.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -53,8 +55,10 @@
     "react-leaflet": "^4.2.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
+    "react-share": "^5.1.0",
     "react-tooltip": "^5.26.4",
     "sharp": "^0.33.4",
+    "stripe": "^16.8.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
