--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^2.2.5",
     "@smastrom/react-rating": "^1.5.0",
-    "@stripe/react-stripe-js": "^2.8.0",
-    "@stripe/stripe-js": "^4.3.0",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
     "@types/react-star-rating-component": "^1.4.4",
@@ -45,7 +43,6 @@
     "lucide-react": "^0.378.0",
     "mongoose": "^8.3.4",
     "next": "^14.2.3",
-    "next-safe-action": "^7.1.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-countup": "^6.5.3",
@@ -55,12 +52,12 @@
     "react-image-gallery": "^1.3.0",
     "react-intersection-observer": "^9.10.2",
     "react-leaflet": "^4.2.1",
+    "react-paystack": "^6.0.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-share": "^5.1.0",
     "react-tooltip": "^5.26.4",
     "sharp": "^0.33.4",
-    "stripe": "^16.8.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
